--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -17,6 +17,8 @@ export(getExpectations)
 export(getParameters)
 export(loadModel)
 export(sampleNames)
+export(scatterPlot)
+export(trainCurve)
 export(viewNames)
 exportClasses(MOFAmodel)
 exportMethods("featureNames<-")
@@ -30,11 +32,10 @@ exportMethods(TrainStats)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
-import("RColorBrewer,")
-import("ggplot2,")
 import(corrplot)
 import(dplyr)
 import(ggplot2)
 import(methods)
 import(pheatmap)
 import(rhdf5)
+import(scales)
