--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: MOFAtools
 Type: Package
+Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk>
 Title: Tools to analyse trained  Multi-Omics Factor Analysis (MOFA) models
 Version: 0.1
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"),
@@ -12,12 +13,13 @@ Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"),
 Maintainer: Ricard Argelaguet <ricard.argelaguet@ebi.ac.uk>
 Date: 2016-12-20
 License: GPL (>= 2)
-Description: A collection of tools for doing various analyses
+Description: A collection of tools for analysing MOFA models.
+	bla bla
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: RColorBrewer, ggplot2, methods, rhdf5, dplyr, pheatmap, stringr, corrplot
+Imports: rhdf5, dplyr, pheatmap, stringr, corrplot, ggplot2, methods
 Suggests: knitr
 VignetteBuilder: knitr
 LazyData: true
 NeedsCompilation: yes
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
