R package and saving model for non-gaussian views

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -7,6 +7,8 @@ export(CalculateProportionVariance)
 export(Expectations)
 export(FactorsCorPlot)
 export(FactorsScatterPlot)
+export(FeaturesCorPlot)
+export(GSEA)
 export(Parameters)
 export(TrainData)
 export(TrainOpts)
@@ -32,6 +34,7 @@ exportMethods(TrainStats)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
+import(PCGSE)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
