--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -4,7 +4,7 @@ Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk>
 Title: Tools to analyse trained  Multi-Omics Factor Analysis (MOFA) models
 Version: 0.1
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"),
-        email="ricard.argealguet@ebi.ac.uk"), person("Damien", "Arnol",
+        email="ricard.argelaguet@ebi.ac.uk"), person("Damien", "Arnol",
         role=c("aut"), email="damien.arnol@ebi.ac.uk"), person("Oliver",
         "Stegle", role=c("aut"),
         email="stegle@ebi.ac.uk"),  person("Florian",
@@ -17,7 +17,7 @@ Description: A collection of tools for analysing MOFA models.
 	bla bla
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: rhdf5, dplyr, pheatmap, stringr, corrplot, ggplot2, methods, scales
+Imports: rhdf5, dplyr, pheatmap, stringr, corrplot, ggplot2, methods, scales, PCGSE
 Suggests: knitr
 VignetteBuilder: knitr
 LazyData: true
