--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -17,7 +17,7 @@ Description: A collection of tools for analysing MOFA models.
 	bla bla
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: rhdf5, dplyr, pheatmap, stringr, corrplot, ggplot2, methods, scales, PCGSE
+Imports: rhdf5, dplyr, pheatmap, stringr, corrplot, ggplot2, methods, scales, safe
 Suggests: knitr
 VignetteBuilder: knitr
 LazyData: true
