--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -5,11 +5,13 @@ export("featureNames<-")
 export("sampleNames<-")
 export("viewNames<-")
 export(CalculateVariance_Views)
+export(CorrplotLFvsPC)
 export(Expectations)
 export(FactorsCorPlot)
 export(FactorsScatterPlot)
 export(FeaturesCorPlot)
 export(GSEA)
+export(ModelOpts)
 export(Parameters)
 export(TrainData)
 export(TrainOpts)
@@ -18,11 +20,15 @@ export(ViewFactorPlot)
 export(factorNames)
 export(featureNames)
 export(getExpectations)
+export(getGoodnessOfFit)
 export(getParameters)
+export(imputeMissing)
 export(loadModel)
 export(sampleNames)
 export(scatterPlot)
-export(trainCurve)
+export(showWeights)
+export(trainCurveELBO)
+export(trainCurveFactors)
 export(viewNames)
 exportClasses(MOFAmodel)
 exportMethods("factorNames<-")
@@ -30,6 +36,7 @@ exportMethods("featureNames<-")
 exportMethods("sampleNames<-")
 exportMethods("viewNames<-")
 exportMethods(Expectations)
+exportMethods(ModelOpts)
 exportMethods(Parameters)
 exportMethods(TrainData)
 exportMethods(TrainOpts)
@@ -38,12 +45,13 @@ exportMethods(factorNames)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
-import(PCGSE)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
 import(methods)
+import(pcaMethods)
 import(pheatmap)
 import(rhdf5)
+import(safe)
 import(scales)
 import(tidyr)
