warping fixed, permutation and other changes in R pacckage

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -16,16 +16,21 @@ export(Parameters)
 export(TrainData)
 export(TrainOpts)
 export(TrainStats)
-export(ViewFactorPlot)
+export(calculateVarianceExplained)
+export(compareModels)
 export(factorNames)
 export(featureNames)
 export(getExpectations)
 export(getGoodnessOfFit)
 export(getParameters)
+export(histPlot)
 export(imputeMissing)
 export(loadModel)
+export(local.GeneStatistics)
 export(sampleNames)
+export(scatterPairs)
 export(scatterPlot)
+export(showWeightHeatmap)
 export(showWeights)
 export(trainCurveELBO)
 export(trainCurveFactors)
@@ -45,6 +50,7 @@ exportMethods(factorNames)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
+import(GGally)
 import(corrplot)
 import(dplyr)
 import(ggplot2)
