--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -16,16 +16,19 @@ export(Parameters)
 export(TrainData)
 export(TrainOpts)
 export(TrainStats)
-export(ViewFactorPlot)
+export(compareModels)
+export(detectOutliers)
 export(factorNames)
 export(featureNames)
 export(getExpectations)
 export(getGoodnessOfFit)
 export(getParameters)
+export(histPlot)
 export(imputeMissing)
 export(loadModel)
 export(sampleNames)
 export(scatterPlot)
+export(showWeightHeatmap)
 export(showWeights)
 export(trainCurveELBO)
 export(trainCurveFactors)
