Extended MOFA object class, functions to initialize and prepare run, extended vignette, added CLL data

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -11,15 +11,19 @@ export(FactorsCorPlot)
 export(FactorsScatterPlot)
 export(FeaturesCorPlot)
 export(GSEA)
+export(InputData)
 export(ModelOpts)
 export(Parameters)
 export(TrainData)
 export(TrainOpts)
 export(TrainStats)
-export(compareModels)
 export(calculateVarianceExplained)
+export(compareModels)
+export(createMOFAobject)
 export(factorNames)
 export(featureNames)
+export(getDefaultModelOpts)
+export(getDefaultTrainOpts)
 export(getExpectations)
 export(getGoodnessOfFit)
 export(getParameters)
@@ -27,6 +31,9 @@ export(histPlot)
 export(imputeMissing)
 export(loadModel)
 export(local.GeneStatistics)
+export(prepareMOFA)
+export(prepareMOFAInputFiles)
+export(prepareMOFARunFile)
 export(sampleNames)
 export(scatterPairs)
 export(scatterPlot)
@@ -41,6 +48,7 @@ exportMethods("featureNames<-")
 exportMethods("sampleNames<-")
 exportMethods("viewNames<-")
 exportMethods(Expectations)
+exportMethods(InputData)
 exportMethods(ModelOpts)
 exportMethods(Parameters)
 exportMethods(TrainData)
@@ -51,9 +59,13 @@ exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
 import(GGally)
+import(MultiAssayExperiment)
+import(RColorBrewer)
 import(corrplot)
+import(doParallel)
 import(dplyr)
 import(ggplot2)
+import(ggrepel)
 import(gridExtra)
 import(methods)
 import(pcaMethods)
