cleaning up and improving R package

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -73,6 +73,7 @@ import(foreach)
 import(ggplot2)
 import(ggrepel)
 import(gridExtra)
+import(magrittr)
 import(methods)
 import(pcaMethods)
 import(pheatmap)
@@ -80,7 +81,7 @@ import(reshape2)
 import(scales)
 import(tidyr)
 importFrom(RColorBrewer,brewer.pal)
-importFrom(RColorBrewer,colorRampPalette)
+importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
 importFrom(rhdf5,h5read)
 importFrom(stats,cor)
