--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -30,6 +30,7 @@ export(getDefaultModelOpts)
 export(getDefaultTrainOpts)
 export(getExpectations)
 export(getParameters)
+export(getTrainData)
 export(histPlot)
 export(imputeMissing)
 export(loadModel)
@@ -66,7 +67,6 @@ import(GGally)
 import(MultiAssayExperiment)
 import(beeswarm)
 import(corrplot)
-import(cowplot)
 import(doParallel)
 import(dplyr)
 import(foreach)
@@ -81,6 +81,7 @@ import(reshape2)
 import(scales)
 import(tidyr)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(cowplot,plot_grid)
 importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
 importFrom(rhdf5,h5read)
