R pakcage: subset/sort factors

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -26,6 +26,7 @@ export(compareModels)
 export(createMOFAobject)
 export(factorNames)
 export(featureNames)
+export(getCovariates)
 export(getDefaultModelOpts)
 export(getDefaultTrainOpts)
 export(getExpectations)
@@ -43,6 +44,7 @@ export(showDataHeatmap)
 export(showDataScatter)
 export(showWeightHeatmap)
 export(showWeights)
+export(subsetFactors)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
