--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -14,7 +14,7 @@ License: GPL (>= 2)
 Description: A collection of tools for analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: rhdf5, dplyr, tidyr, pheatmap, stringr, corrplot, ggplot2, methods, scales, gridExtra, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, beeswarm, cowplot, ggrepel, reshape2, foreach, grDevices, magrittr
+Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, cowplot, ggrepel, foreach, grDevices
 Suggests: knitr
 VignetteBuilder: knitr
 LazyData: true
