--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -4,10 +4,10 @@ export("factorNames<-")
 export("featureNames<-")
 export("sampleNames<-")
 export("viewNames<-")
+export(Barplot_FeatureSetEnrichmentAnalysis)
 export(CorrplotLFvsPC)
 export(Expectations)
 export(FactorsCorPlot)
-export(FactorsScatterPlot)
 export(FeatureSetEnrichmentAnalysis)
 export(FeaturesCorPlot)
 export(Heatmap_FeatureSetEnrichmentAnalysis)
@@ -24,27 +24,36 @@ export(calculateVarianceExplained)
 export(clusterSamples)
 export(compareModels)
 export(createMOFAobject)
+export(detectPassengers)
 export(factorNames)
 export(featureNames)
 export(getCovariates)
 export(getDefaultModelOpts)
 export(getDefaultTrainOpts)
+export(getDimensions)
 export(getExpectations)
+export(getFactors)
+export(getImputedData)
 export(getParameters)
 export(getTrainData)
+export(getWeights)
 export(histPlot)
 export(imputeMissing)
 export(loadModel)
+export(predict)
 export(prepareMOFA)
 export(runMOFA)
 export(sampleNames)
 export(scatterPairs)
 export(scatterPlot)
+export(showAllWeights)
 export(showDataHeatmap)
 export(showDataScatter)
+export(showSparsity)
+export(showTopWeights)
 export(showWeightHeatmap)
-export(showWeights)
 export(subsetFactors)
+export(subsetSamples)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
@@ -66,26 +75,22 @@ exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
 import(GGally)
-import(MultiAssayExperiment)
-import(beeswarm)
 import(corrplot)
 import(doParallel)
 import(dplyr)
 import(foreach)
 import(ggplot2)
 import(ggrepel)
-import(gridExtra)
-import(magrittr)
 import(methods)
 import(pcaMethods)
 import(pheatmap)
 import(reshape2)
 import(scales)
-import(tidyr)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,plot_grid)
 importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
+importFrom(plyr,rbind.fill.matrix)
 importFrom(rhdf5,h5read)
 importFrom(stats,cor)
 importFrom(stats,p.adjust)
