--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MOFAtools
 Type: Package
-Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk>
+Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
 Title: Tools to analyse trained  Multi-Omics Factor Analysis (MOFA) models
 Version: 0.1
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard.argelaguet@ebi.ac.uk"), 
@@ -14,7 +14,7 @@ License: GPL (>= 2)
 Description: A collection of tools for analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, cowplot, ggrepel, foreach, grDevices
+Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, cowplot, ggrepel, foreach
 Suggests: knitr
 VignetteBuilder: knitr
 LazyData: true
