--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 .Rproj.user
 *egg-info*
 .DS_Store
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
