--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -15,7 +15,7 @@ Description: A collection of tools for analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.3)
 Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, cowplot, ggrepel, foreach
-Suggests: knitr
+Suggests: knitr, MultiAssayExperiment
 VignetteBuilder: knitr
 LazyData: true
 NeedsCompilation: yes
