--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -7,7 +7,11 @@ export("viewNames<-")
 export(Barplot_FeatureSetEnrichmentAnalysis)
 export(CorrplotLFvsPC)
 export(Expectations)
+export(FactorBeeswarmPlot)
+export(FactorHistPlot)
 export(FactorsCorPlot)
+export(FactorsScatterPairs)
+export(FactorsScatterPlot)
 export(FeatureSetEnrichmentAnalysis)
 export(FeaturesCorPlot)
 export(Heatmap_FeatureSetEnrichmentAnalysis)
@@ -19,7 +23,6 @@ export(Parameters)
 export(TrainData)
 export(TrainOpts)
 export(TrainStats)
-export(beeswarmPlot)
 export(calculateVarianceExplained)
 export(clusterSamples)
 export(compareModels)
@@ -28,6 +31,7 @@ export(detectPassengers)
 export(factorNames)
 export(featureNames)
 export(getCovariates)
+export(getDefaultDataOpts)
 export(getDefaultModelOpts)
 export(getDefaultTrainOpts)
 export(getDimensions)
@@ -37,21 +41,17 @@ export(getImputedData)
 export(getParameters)
 export(getTrainData)
 export(getWeights)
-export(histPlot)
 export(imputeMissing)
 export(loadModel)
+export(plotTopWeights)
+export(plotWeights)
+export(plotWeightsHeatmap)
 export(predict)
 export(prepareMOFA)
 export(runMOFA)
 export(sampleNames)
-export(scatterPairs)
-export(scatterPlot)
-export(showAllWeights)
 export(showDataHeatmap)
 export(showDataScatter)
-export(showSparsity)
-export(showTopWeights)
-export(showWeightHeatmap)
 export(subsetFactors)
 export(subsetSamples)
 export(trainCurveELBO)
