--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -1,3 +1,5 @@
+biocViews:
+
 Package: MOFAtools
 Type: Package
 Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
@@ -13,6 +15,7 @@ Date: 2016-12-20
 License: GPL (>= 2)
 Description: A collection of tools for analysing MOFA models.
 Encoding: UTF-8
+biocViews:
 Depends: R (>= 3.3)
 Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, pcaMethods, GGally, doParallel, MultiAssayExperiment, RColorBrewer, cowplot, ggrepel, foreach
 Suggests: knitr, MultiAssayExperiment
