--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MOFAtools
 Type: Package
 Maintainer: Ricard Argelaguet <ricard.argealguet@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
-Title: Tools to analyse trained  Multi-Omics Factor Analysis (MOFA) models
+Title: Multi-Omics Factor Analysis (MOFA)
 Version: 0.1
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard.argelaguet@ebi.ac.uk"), 
 		person("Britta", "Velten", role=c("aut", "ctb"), email="britta.velten@embl.de"), 
@@ -11,11 +11,11 @@ Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard.
 		person("Oliver", "Stegle", role=c("aut"), email="stegle@ebi.ac.uk"))
 Date: 2016-12-20
 License: GPL (>= 2)
-Description: A collection of tools for analysing MOFA models.
+Description: A collection of tools for running and analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.3)
-Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, methods, scales, GGally, doParallel, RColorBrewer, cowplot, ggrepel, foreach
-Suggests: knitr, MultiAssayExperiment, pcaMethods
+Imports: rhdf5, dplyr, tidyr, reshape2, pheatmap, corrplot, ggplot2, ggbeeswarm, methods, scales, GGally, doParallel, RColorBrewer, cowplot, ggrepel, foreach, MultiAssayExperiment
+Suggests: knitr, pcaMethods
 biocViews:
 VignetteBuilder: knitr
 LazyData: true
