added plotTilesData function

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -47,6 +47,7 @@ export(imputeMissing)
 export(loadModel)
 export(plotDataHeatmap)
 export(plotDataScatter)
+export(plotTilesData)
 export(plotTopWeights)
 export(plotWeights)
 export(plotWeightsHeatmap)
