update function names in plotFactors.R

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -13,17 +13,12 @@ export("sampleNames<-")
 export("viewNames<-")
 export(Barplot_FeatureSetEnrichmentAnalysis)
 export(Expectations)
-export(FactorBeeswarmPlot)
-export(FactorHistPlot)
-export(FactorsScatterPairs)
-export(FactorsScatterPlot)
 export(FeatureSetEnrichmentAnalysis)
 export(Heatmap_FeatureSetEnrichmentAnalysis)
 export(ImputedData)
 export(InputData)
 export(LinePlot_FeatureSetEnrichmentAnalysis)
 export(ModelOpts)
-export(PlotCorFactors)
 export(TrainData)
 export(TrainOpts)
 export(TrainStats)
@@ -47,6 +42,11 @@ export(imputeMissing)
 export(loadModel)
 export(plotDataHeatmap)
 export(plotDataScatter)
+export(plotFactorBeeswarm)
+export(plotFactorCor)
+export(plotFactorHist)
+export(plotFactorScatter)
+export(plotFactorScatters)
 export(plotTilesData)
 export(plotTopWeights)
 export(plotWeights)
