fix bug Variance Explained

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -23,6 +23,7 @@ export(TrainData)
 export(TrainOpts)
 export(TrainStats)
 export(calculateVarianceExplained)
+export(plotVarianceExplained)
 export(clusterSamples)
 export(compareModels)
 export(createMOFAobject)
