fix bug Variance Explained

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -23,7 +23,6 @@ export(TrainData)
 export(TrainOpts)
 export(TrainStats)
 export(calculateVarianceExplained)
-export(plotVarianceExplained)
 export(clusterSamples)
 export(compareModels)
 export(createMOFAobject)
@@ -50,10 +49,12 @@ export(plotFactorScatter)
 export(plotFactorScatters)
 export(plotTilesData)
 export(plotTopWeights)
+export(plotVarianceExplained)
 export(plotWeights)
 export(plotWeightsHeatmap)
 export(predict)
 export(prepareMOFA)
+export(qualityControl)
 export(runMOFA)
 export(sampleNames)
 export(subsetFactors)
