--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -78,9 +78,7 @@ exportMethods(factorNames)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
-import(GGally)
 import(MultiAssayExperiment)
-import(corrplot)
 import(doParallel)
 import(dplyr)
 import(foreach)
@@ -92,7 +90,7 @@ import(methods)
 import(pheatmap)
 import(reshape2)
 import(scales)
-importFrom(RColorBrewer,brewer.pal)
+importFrom(corrplot,corrplot)
 importFrom(cowplot,plot_grid)
 importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
