--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -58,6 +58,7 @@ export(qualityControl)
 export(runMOFA)
 export(sampleNames)
 export(subsetFactors)
+export(subsetSamples)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
@@ -79,6 +80,7 @@ exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
 import(MultiAssayExperiment)
+import(RColorBrewer)
 import(doParallel)
 import(dplyr)
 import(foreach)
@@ -90,6 +92,7 @@ import(methods)
 import(pheatmap)
 import(reshape2)
 import(scales)
+importFrom(Biobase,phenoData)
 importFrom(corrplot,corrplot)
 importFrom(cowplot,plot_grid)
 importFrom(grDevices,colorRampPalette)
