replace Opts by Options

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -3,9 +3,9 @@
 export(".Expectations<-")
 export(".ImputedData<-")
 export(".InputData<-")
-export(".ModelOpts<-")
+export(".ModelOptions<-")
 export(".TrainData<-")
-export(".TrainOpts<-")
+export(".TrainOptions<-")
 export(".TrainStats<-")
 export("factorNames<-")
 export("featureNames<-")
@@ -18,9 +18,9 @@ export(Heatmap_FeatureSetEnrichmentAnalysis)
 export(ImputedData)
 export(InputData)
 export(LinePlot_FeatureSetEnrichmentAnalysis)
-export(ModelOpts)
+export(ModelOptions)
 export(TrainData)
-export(TrainOpts)
+export(TrainOptions)
 export(TrainStats)
 export(calculateVarianceExplained)
 export(clusterSamples)
@@ -29,9 +29,9 @@ export(createMOFAobject)
 export(factorNames)
 export(featureNames)
 export(getCovariates)
-export(getDefaultDataOpts)
-export(getDefaultModelOpts)
-export(getDefaultTrainOpts)
+export(getDefaultDataOptions)
+export(getDefaultModelOptions)
+export(getDefaultTrainOptions)
 export(getDimensions)
 export(getExpectations)
 export(getFactors)
@@ -71,9 +71,9 @@ exportMethods("viewNames<-")
 exportMethods(Expectations)
 exportMethods(ImputedData)
 exportMethods(InputData)
-exportMethods(ModelOpts)
+exportMethods(ModelOptions)
 exportMethods(TrainData)
-exportMethods(TrainOpts)
+exportMethods(TrainOptions)
 exportMethods(TrainStats)
 exportMethods(factorNames)
 exportMethods(featureNames)
