added model comparison and selection functions

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -24,7 +24,8 @@ export(TrainOptions)
 export(TrainStats)
 export(calculateVarianceExplained)
 export(clusterSamples)
-export(compareModels)
+export(compare_factors)
+export(compare_models)
 export(createMOFAobject)
 export(factorNames)
 export(featureNames)
@@ -33,6 +34,7 @@ export(getDefaultDataOptions)
 export(getDefaultModelOptions)
 export(getDefaultTrainOptions)
 export(getDimensions)
+export(getELBO)
 export(getExpectations)
 export(getFactors)
 export(getImputedData)
@@ -57,6 +59,7 @@ export(prepareMOFA)
 export(qualityControl)
 export(runMOFA)
 export(sampleNames)
+export(select_model)
 export(subsetFactors)
 export(subsetSamples)
 export(trainCurveELBO)
