changed default factor names to 'LFx' and fixed FSEA for single factors

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -62,6 +62,7 @@ export(sampleNames)
 export(select_model)
 export(subsetFactors)
 export(subsetSamples)
+export(subsetViews)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
