reticulate implemented and corrected some functions

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -62,6 +62,7 @@ export(sampleNames)
 export(select_model)
 export(subsetFactors)
 export(subsetSamples)
+export(subsetViews)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
@@ -94,6 +95,7 @@ import(grDevices)
 import(methods)
 import(pheatmap)
 import(reshape2)
+import(reticulate)
 import(scales)
 importFrom(Biobase,phenoData)
 importFrom(corrplot,corrplot)
