--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -24,8 +24,8 @@ export(TrainOptions)
 export(TrainStats)
 export(calculateVarianceExplained)
 export(clusterSamples)
-export(compare_factors)
-export(compare_models)
+export(compareFactors)
+export(compareModels)
 export(createMOFAobject)
 export(factorNames)
 export(featureNames)
@@ -42,6 +42,7 @@ export(getTrainData)
 export(getWeights)
 export(imputeMissing)
 export(loadModel)
+export(makeExampleData)
 export(plotDataHeatmap)
 export(plotDataScatter)
 export(plotFactorBeeswarm)
@@ -59,7 +60,7 @@ export(prepareMOFA)
 export(qualityControl)
 export(runMOFA)
 export(sampleNames)
-export(select_model)
+export(selectModel)
 export(subsetFactors)
 export(subsetSamples)
 export(trainCurveELBO)
