--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -63,6 +63,7 @@ export(sampleNames)
 export(selectModel)
 export(subsetFactors)
 export(subsetSamples)
+export(subsetViews)
 export(trainCurveELBO)
 export(trainCurveFactors)
 export(viewNames)
