changed names of enrichment analysis functions

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -11,13 +11,9 @@ export("factorNames<-")
 export("featureNames<-")
 export("sampleNames<-")
 export("viewNames<-")
-export(Barplot_FeatureSetEnrichmentAnalysis)
 export(Expectations)
-export(FeatureSetEnrichmentAnalysis)
-export(Heatmap_FeatureSetEnrichmentAnalysis)
 export(ImputedData)
 export(InputData)
-export(LinePlot_FeatureSetEnrichmentAnalysis)
 export(ModelOptions)
 export(TrainData)
 export(TrainOptions)
@@ -45,6 +41,9 @@ export(loadModel)
 export(makeExampleData)
 export(plotDataHeatmap)
 export(plotDataScatter)
+export(plotEnrichment)
+export(plotEnrichmentBars)
+export(plotEnrichmentHeatmap)
 export(plotFactorBeeswarm)
 export(plotFactorCor)
 export(plotFactorHist)
@@ -58,6 +57,7 @@ export(plotWeightsHeatmap)
 export(predict)
 export(prepareMOFA)
 export(qualityControl)
+export(runEnrichmentAnalysis)
 export(runMOFA)
 export(sampleNames)
 export(selectModel)
