fixed declarations and dependencies to pass R code checks

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -105,4 +105,17 @@ importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
 importFrom(rhdf5,h5read)
 importFrom(stats,cor)
+importFrom(stats,dist)
+importFrom(stats,hclust)
+importFrom(stats,kmeans)
 importFrom(stats,p.adjust)
+importFrom(stats,p.adjust.methods)
+importFrom(stats,pnorm)
+importFrom(stats,pt)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,var)
+importFrom(stats,wilcox.test)
+importFrom(utils,head)
+importFrom(utils,tail)
