--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -2,21 +2,21 @@ Package: MOFAtools
 Type: Package
 Maintainer: Ricard Argelaguet <ricard.argelaguet@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
 Title: Multi-Omics Factor Analysis (MOFA)
-Version: 1.0
+Version: 0.99.0
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@ebi.ac.uk"), 
 		person("Britta", "Velten", role=c("aut", "ctb"), email="britta.velten@embl.de"), 
 		person("Damien", "Arnol", role=c("aut"), email="damien.arnol@ebi.ac.uk"), 
 		person("Florian", "Buettner", role=c("aut"), email="fbuettner.phys@gmail.com"),
 		person("Wolfgang", "Huber", role=c("aut"), email="wolfgang.huber@embl.de"),  
 		person("Oliver", "Stegle", role=c("aut"), email="stegle@ebi.ac.uk"))
-Date: 2016-12-20
+Date: 2018-06-26
 License: GPL (>= 2)
 Description: A collection of tools for running and analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.4)
 Imports: rhdf5, dplyr, reshape2, pheatmap, corrplot, ggplot2, ggbeeswarm, methods, scales, GGally, RColorBrewer, cowplot, ggrepel, MultiAssayExperiment, Biobase, doParallel, foreach, reticulate
 Suggests: knitr
-biocViews:
+biocViews: DimensionReduction, Bayesian, Visualization
 VignetteBuilder: knitr
 LazyData: true
 NeedsCompilation: yes
