fix dimensionality error with sparsity=F and update doc

--- a/MOFAtools/NAMESPACE
+++ b/MOFAtools/NAMESPACE
@@ -62,7 +62,6 @@ exportMethods(factorNames)
 exportMethods(featureNames)
 exportMethods(sampleNames)
 exportMethods(viewNames)
-import(Biobase)
 import(MultiAssayExperiment)
 import(RColorBrewer)
 import(doParallel)
@@ -77,6 +76,7 @@ import(pheatmap)
 import(reshape2)
 import(reticulate)
 import(scales)
+importFrom(Biobase,ExpressionSet)
 importFrom(Biobase,phenoData)
 importFrom(corrplot,corrplot)
 importFrom(cowplot,plot_grid)
