--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -21,4 +21,4 @@ VignetteBuilder: knitr
 LazyData: true
 NeedsCompilation: yes
 RoxygenNote: 6.0.1
-SystemRequirements: Python (>=2.7.0), numpy, pandas, h5py, scipy, sklearn
+SystemRequirements: Python (>=2.7.0), numpy, pandas, h5py, scipy, sklearn, mofapy
