--- a/MOFAtools/DESCRIPTION
+++ b/MOFAtools/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MOFAtools
 Type: Package
-Maintainer: Ricard Argelaguet <ricard.argelaguet@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
+Maintainer: Ricard Argelaguet <ricard@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
 Title: Multi-Omics Factor Analysis (MOFA)
 Version: 0.99.0
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@ebi.ac.uk"), 
@@ -10,7 +10,7 @@ Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@
 		person("Wolfgang", "Huber", role=c("aut"), email="wolfgang.huber@embl.de"),  
 		person("Oliver", "Stegle", role=c("aut"), email="stegle@ebi.ac.uk"))
 Date: 2018-06-26
-License: GPL (>= 2)
+License: LGPL-3.0
 Description: A collection of tools for running and analysing MOFA models.
 Encoding: UTF-8
 Depends: R (>= 3.4)
