--- a/MOFA/DESCRIPTION
+++ b/MOFA/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: MOFAtools
+Package: MOFA
 Type: Package
 Maintainer: Ricard Argelaguet <ricard@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
 Title: Multi-Omics Factor Analysis (MOFA)
@@ -11,7 +11,7 @@ Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@
 		person("Oliver", "Stegle", role=c("aut"), email="stegle@ebi.ac.uk"))
 Date: 2018-06-26
 License: LGPL-3.0
-Description: A collection of tools for running and analysing MOFA models.
+Description: Multi-Omics Factor Analysis: an unsupervised framework for the integration of multi-omics data sets.
 Encoding: UTF-8
 Imports: rhdf5, dplyr, reshape2, pheatmap, corrplot, ggplot2, ggbeeswarm, methods, scales, GGally, RColorBrewer, cowplot, ggrepel, MultiAssayExperiment, Biobase, doParallel, foreach, reticulate, grDevices, stats, utils
 Suggests: knitr, MOFAdata
