added R dependency for data objects

--- a/MOFAdata/DESCRIPTION
+++ b/MOFAdata/DESCRIPTION
@@ -11,6 +11,7 @@ Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@
 		person("Oliver", "Stegle", role=c("aut"), email="stegle@ebi.ac.uk"))
 Date: 2018-06-26
 License: LGPL-3
+Depends: R (>= 2.10)
 Description: A collection of datasets to accompany the R package MOFA and illustrate running and analysing MOFA models.
 Encoding: UTF-8
 biocViews: ReproducibleResearch
