renamed plotTilesData to plotDataOverview

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(impute)
 export(loadModel)
 export(makeExampleData)
 export(plotDataHeatmap)
+export(plotDataOverview)
 export(plotDataScatter)
 export(plotEnrichment)
 export(plotEnrichmentBars)
@@ -35,7 +36,6 @@ export(plotFactorCor)
 export(plotFactorHist)
 export(plotFactorScatter)
 export(plotFactorScatters)
-export(plotTilesData)
 export(plotTopWeights)
 export(plotVarianceExplained)
 export(plotWeights)
