warning nchar samples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
 importFrom(rhdf5,h5read)
 importFrom(stats,cor)
+importFrom(stats,lm)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,kmeans)
