improved documentation and updated DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(plotDataOverview)
 export(plotDataScatter)
 export(plotEnrichment)
 export(plotEnrichmentBars)
+export(plotEnrichmentDetailed)
 export(plotEnrichmentHeatmap)
 export(plotFactorBeeswarm)
 export(plotFactorCor)
@@ -43,6 +44,7 @@ export(plotWeightsHeatmap)
 export(predict)
 export(prepareMOFA)
 export(qualityControl)
+export(regressCovariates)
 export(runEnrichmentAnalysis)
 export(runMOFA)
 export(sampleNames)
@@ -80,14 +82,17 @@ importFrom(Biobase,ExpressionSet)
 importFrom(Biobase,phenoData)
 importFrom(corrplot,corrplot)
 importFrom(cowplot,plot_grid)
+importFrom(dplyr,top_n)
+importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
 importFrom(pheatmap,pheatmap)
+importFrom(reshape2,melt)
 importFrom(rhdf5,h5read)
 importFrom(stats,cor)
-importFrom(stats,lm)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,kmeans)
+importFrom(stats,lm)
 importFrom(stats,p.adjust)
 importFrom(stats,p.adjust.methods)
 importFrom(stats,pnorm)
