--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,5 @@
 Package: MOFA
 Type: Package
-Maintainer: Ricard Argelaguet <ricard@ebi.ac.uk> and Britta Velten <britta.velten@embl.de>
 Title: Multi-Omics Factor Analysis (MOFA)
 Version: 0.99.6
 Authors@R: c(person("Ricard", "Argelaguet", role=c("aut", "cre"), email="ricard@ebi.ac.uk"), 
@@ -13,11 +12,12 @@ Date: 2018-06-26
 License: LGPL-3 | file LICENSE
 Description: Multi-Omics Factor Analysis: an unsupervised framework for the integration of multi-omics data sets.
 Encoding: UTF-8
+Depends: R (>= 3.5)
 Imports: rhdf5, dplyr, reshape2, pheatmap, corrplot, ggplot2, ggbeeswarm, methods, scales, GGally, RColorBrewer, cowplot, ggrepel, MultiAssayExperiment, Biobase, doParallel, foreach, reticulate, grDevices, stats, utils
 Suggests: knitr, MOFAdata
 biocViews: DimensionReduction, Bayesian, Visualization
 VignetteBuilder: knitr
-LazyData: true
+LazyData: false
 NeedsCompilation: yes
 RoxygenNote: 6.1.1
 SystemRequirements: Python (>=2.7.0), numpy, pandas, h5py, scipy, sklearn, mofapy
